Complelted the entire landing page

--- a/Level 1/Task1_HTML_CSS_Only/index.html
+++ b/Level 1/Task1_HTML_CSS_Only/index.html
@@ -34,85 +34,95 @@
             </div>
         </div>
     </section>
-    <section id="blog" class="Blog">
-        <div class="blogItem">
-            <h3>How to clean your Ac filter</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit illum, aperiam quidem nihil nisi nemo consequuntur exercitationem ducimus, molestias possimus architecto esse omnis labore fuga mollitia alias fugiat eveniet veniam!</p>
-        </div>
-        <div class="blogItem">
-            <h3>Which tools you should keep at your house at all times</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quaerat quasi nulla sit ut tempore omnis eaque laborum magnam libero quos dicta error in harum repellendus fugit ab? Culpa, vel.</p>
-        </div>
-        <div class="blogItem">
-            <h3>How to create an elbows with PVCs</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, dolor. Facere consequatur laudantium dolores nihil at modi non error temporibus quidem, facilis, ullam, tenetur exercitationem maxime excepturi labore illo possimus!</p>
-        </div>
-        <div class="blogItem">
-            <h3>Checks before buying fittings</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eius quae delectus sapiente incidunt. Eveniet reiciendis maiores, sint nobis voluptatum perspiciatis eum. Ex numquam natus, quibusdam sapiente quos in inventore.</p>
-        </div>
+    <section id="blog" class="blogContainer">
+        <h3>Blogs</h3>
+        <section class="Blog">
+            <div class="blogItem">
+                <img class="blogPic" src="assets/BlogPicture.jpg" alt="BlogPicture">
+                <div class="blogText">
+                    <h3>How to clean your Ac filter</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit illum, aperiam quidem nihil nisi nemo consequuntur exercitationem ducimus, molestias possimus architecto esse omnis labore fuga mollitia alias fugiat eveniet veniam!</p>
+                    </div>
+            </div>
+            <div class="blogItem">
+                <img class="blogPic" src="assets/BlogPicture.jpg" alt="BlogPicture">
+                <div class="blogText">
+                    <h3>Which tools you should keep at your house at all times</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quaerat quasi nulla sit ut tempore omnis eaque laborum magnam libero quos dicta error in harum repellendus fugit ab? Culpa, vel.</p>
+                </div>
+            </div>
+            <div class="blogItem">
+                <img class="blogPic" src="assets/BlogPicture.jpg" alt="BlogPicture">
+                <div class="blogText">
+                    <h3>How to create an elbows with PVCs</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, dolor. Facere consequatur laudantium dolores nihil at modi non error temporibus quidem, facilis, ullam, tenetur exercitationem maxime excepturi labore illo possimus!</p>
+                </div>
+            </div>
+            <div class="blogItem">
+                <img class="blogPic" src="assets/BlogPicture.jpg" alt="BlogPicture">
+                <div class="blogText">
+                    <h3>Checks before buying fittings</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eius quae delectus sapiente incidunt. Eveniet reiciendis maiores, sint nobis voluptatum perspiciatis eum. Ex numquam natus, quibusdam sapiente quos in inventore.</p>
+                </div>
+            </div>
+        </section>
     </section>
     <section id="service" class="Services">
-        <section>
-            <h4>Service 1</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque sapiente vel sunt non nesciunt? Consequatur laboriosam consequuntur.</p>
-        </section>
-        <section>
-            <h4>Service 2</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid pariatur et consequuntur, animi.</p>
-        </section>
-        <section>
-            <h4>service 3</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam omnis est laborum modi dolore iusto.</p>
+        <h3>Plumbing Services</h3>
+        <section class="serviceGrid">
+            <section class="service">
+                <img src="assets/ServicesPicture.jpg" alt="ServicesPicture">
+                <div class="serviceText">
+                    <h4>Installation</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid pariatur et consequuntur, animi.</p>
+                </div>
+            </section>
+            <section class="service">
+                <img src="assets/ServicesPicture.jpg" alt="ServicesPicture">
+                <div class="serviceText">
+                    <h4>Mantainance</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid pariatur et consequuntur, animi.</p>
+                </div>
+            </section>
         </section>
     </section>
     <section id="testimonials" class="Testimonials">
-        <div>
-            <img src="" alt="peson1">
-            <div>
-                <h5>John Happy</h5>
-                <p>Lorem ipsum dolor sit amet</p>
+        <h3>Testimonials</h3>
+        <div class="testimonialGrid">
+            <div class="testimonial">
+                <img src="assets/Person1.jpg" alt="peson1">
+                <div class="testimonialText">
+                    <h4>John Happy</h4>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="assets/pexels-israel-torres-17825239.jpg" alt="peson2">
+                <div class="testimonialText">
+                    <h4>Oliver barns</h4>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="assets/pexels-lokman-sevim-14950477.jpg" alt="peson3">
+                <div class="testimonialText">
+                    <h4>Martha Wayne</h4>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="assets/pexels-phydio-patcho-17747771.jpg" alt="peson4">
+                <div class="testimonialText">
+                <h4>John Happy</h4>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
             </div>
         </div>
-        <div>
-            <img src="" alt="peson2">
-            <div>
-                <h5>Oliver barns</h5>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div>
-            <img src="" alt="peson3">
-            <div>
-                <h5>Martha Wayne</h5>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div>
-            <img src="" alt="peson4">
-            <div>
-               <h5>John Happy</h5>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="Contact">
-        <label for="email">Your Email</label>
-        <input name="email" placeholder="email" type="email" />
-        <label for="textArea">Your Query</label>
-        <textarea name="textArea" placeholder="your query" ></textarea>
-        <input type="submit">
     </section>
     <footer class="footer">
         <div>
-            <img src="" alt="logo">
-            <div>
-                &copy; 2023 Your Company. All rights reserved.
-            </div>
-        </div>
-        <div>
-            <a href=""><img src="" alt="twitter"></a>
-            <a href=""><img src="" alt="instagram"></a>
+            <h2 class="logo"><a href="#">Dan's Plumbing</a></h2>
+            &copy; 2023. All rights reserved.
         </div>
     </footer>
     <script>
