--- a/Level 1/Task2/index.html
+++ b/Level 1/Task2/index.html
@@ -11,24 +11,28 @@
         <h2>Muhammad Rohail Omer</h2>
         <div class="navigationLinks">
             <ul>
-                <li><a href="">About Me</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="" download>Resume</a></li>
+                <li><a href="assets/Muhammad_Rohail_Ome_Web_Developer.pdf" download>Resume</a></li>
             </ul>
         </div>
     </nav>
     <section class="aboutMe">
-        <img class="aboutMeImg" src="" alt="Me">
         <diV class="aboutMeText">
             <h3 class="aboutMeName">Hi I am Rohail</h3>
             <p class="aboutMeBio">I am a dedicated web developer with a strong affinity for frontend technologies such as HTML, CSS, Javascript, React, Tailwind, Bootstrap and Material UI with a basis understanding of backend concepts</p>
             <div class="socialMedia">
-                <img src="" alt="gitHub">
-                <img src="" alt="linkdin">
+                <a href="https://github.com/Racta19"><img src="assets/github_PNG80.png" alt="gitHub"></a>
+                <a href=""><img src="assets/OIP.jpeg" alt="linkdin"></a>
             </div>
-           <a class="aboutMeButton" href="" download>Resume</a>
+            <div class="contactMe">
+                <p>Contact me through Linkedin</p>
+                <p>Or</p>
+                <p>Email @ <span style="text-decoration: underline;">rohailomer98@outlook.com</span> </p>
+            </div>
+           <a class="aboutMeButton" href="assets/Muhammad_Rohail_Ome_Web_Developer.pdf" download>
+            Resume
+            </a>
         </diV>
+        <img class="aboutMeImg" src="assets/Me.jpeg" alt="Me">
     </section>
     <section class="skills">
         <div class="skillCard">
@@ -77,42 +81,48 @@
     <section class="projectContainer">
         <h2>Projects</h2>
         <div class="Projects">
-            <div class="projectCard">
-                <h4>title</h4>
-                <p>A brief introduction to the project</p>
-                <a href="">Project Link</a>
+            <div class="projectCard" >
+                <img  src="assets/Github Projects.jpeg" alt="img">
+                <h4>Table Reservation App</h4>
+                <p>Created a tabele reservation feature for a fictional Resutrant</p>
+                <a href="https://github.com/Racta19/table-reservation-app">Project Link</a>
             </div>
             <div class="projectCard">
-                <h4>title</h4>
-                <p>A brief introduction to the project</p>
-                <a href="">Project Link</a>
+                <img src="assets/Github Projects.jpeg" alt="img">
+                <h4>GPT product</h4>
+                <p>Create a front-end for a fictional gpt product</p>
+                <a href="https://github.com/Racta19/gp_1">Project Link</a>
             </div>
             <div class="projectCard">
-                <h4>title</h4>
-                <p>A brief introduction to the project</p>
-                <a href="">Project Link</a>
+                <img src="assets/Github Projects.jpeg" alt="img">
+                <h4>Resturant landing Page</h4>
+                <p>Created the landing page for a SPA</p>
+                <a href="https://github.com/Racta19/gp_2">Project Link</a>
             </div>
             <div class="projectCard">
-                <h4>title</h4>
-                <p>A brief introduction to the project</p>
-                <a href="">Project Link</a>
+                <img src="assets/Github Projects.jpeg" alt="img">
+                <h4>Lyrics App</h4>
+                <p>Tried to create a spotify clone with an external API(ongoing)</p>
+                <a href="https://github.com/Racta19/Lyrics-Project">Project Link</a>
             </div>
             <div class="projectCard">
-                <h4>title</h4>
-                <p>A brief introduction to the project</p>
-                <a href="">Project Link</a>
+                <img src="assets/Github Projects.jpeg" alt="img">
+                <h4>Akthar Stationer's App</h4>
+                <p>An online E-commerce App(private repo)</p>
+                <a href="https://github.com/Racta19/Akhtar-Stationers-Full-Web-App">Project Link</a>
             </div>
             <div class="projectCard">
-                <h4>title</h4>
-                <p>A brief introduction to the project</p>
-                <a href="">Project Link</a>
+                <img src="assets/Github Projects.jpeg" alt="img">
+                <h4>Finance dashboard</h4>
+                <p>Created dashboard with graphs and some Machine Learning</p>
+                <a href="https://github.com/Racta19/Finance-Dashboard">Project Link</a>
             </div>
         </div>
     </section>
     <section class="certifications">
         <h2>Certifications</h2>
         <div class="certificationCard">
-            <img src="" alt="certificate">
+            <img src="assets/Certification.JPG" alt="certificate">
             <div class="certificationText">
                 <h4>Meta Front-End Developer</h4>
                 <p>This 9-course program prepares learners for an entry-level career as a front-end developer</p>
