--- a/Level 2/Task1/index.html
+++ b/Level 2/Task1/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="paragraph">
             <h2>The Foundation</h2>
-            <p>The Edhi Foundation, established in 1951, began as a modest clinic in Karachi. Edhi's mission was clear: to provide medical aid, shelter, and care to those in need, regardless of their background or circumstances. With time, this small clinic blossomed into a network of hospitals, dispensaries, orphanages, and homes for the elderly and mentally ill.</p>
+            <p>The Edhi Foundation, established in 1951, began as a modest clinic in Karachi. Edhi's mission was clear, to provide medical aid, shelter, and care to those in need, regardless of their background or circumstances. With time, this small clinic blossomed into a network of hospitals, dispensaries, orphanages, and homes for the elderly and mentally ill.</p>
         </div>
         <div class="paragraph">
             <h2>Significant Contributions</h2>
